<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <LinearLayout android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
      <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                         android:id="@+id/toolbar"
                                         app:contentInsetLeft="0dp"
                                         app:contentInsetStart="0dp"
                                         android:layout_height="wrap_content"
                                         android:layout_width="match_parent"
                                         android:background="@color/colorPrimary">
          <LinearLayout android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">

              <LinearLayout android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:id="@+id/backToListLayout"
                            android:layout_height="wrap_content">
                  <LinearLayout android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:layout_height="match_parent">
                      <TextView
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:text="@string/codeOfDevice"
                              android:layout_weight="2.1"
                              android:gravity="end"
                              android:textColor="@color/white"
                              android:textSize="20sp"/>
                      <TextView
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"

                              android:layout_weight="1.3"
                              android:id="@+id/codeOfDevice"
                              android:textColor="@color/white"
                              android:textSize="20sp"/>
                  </LinearLayout>
                  <LinearLayout android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal"
                                android:layout_height="match_parent">
                      <TextView
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:text="I  P 地 址："
                              android:layout_weight="2.1"
                              android:gravity="end"
                              android:textColor="@color/white"
                              android:textSize="20sp"/>
                      <TextView

                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"

                              android:layout_weight="1.3"
                              android:id="@+id/ipAddress"
                              android:textColor="@color/white"
                              android:textSize="20sp"/>
                  </LinearLayout>




              </LinearLayout>
              <LinearLayout android:layout_width="match_parent"
                            android:layout_weight="3.5"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content">
                  <TextView android:layout_width="wrap_content"

                            android:textColor="@color/white"
                            android:layout_height="wrap_content"/>
              </LinearLayout>
          </LinearLayout>
      </android.support.v7.widget.Toolbar>
      <android.support.v4.widget.SwipeRefreshLayout
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_marginTop="10dp"
              android:layout_marginRight="5dp"
              android:layout_marginLeft="5dp"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/swipeLayout" >
          <ListView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/listOfDevices"
                    android:divider="@color/white"
                    android:dividerHeight="10dp"
          >


          </ListView>

      </android.support.v4.widget.SwipeRefreshLayout>
  </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="9"
                  android:paddingTop="5dp"
                  android:orientation="horizontal"
    >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_weight="1"
                      android:layout_height="match_parent">
            <Button android:layout_width="match_parent"
                    android:text="@string/goback"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/btn_default"
                    android:layout_height="45dp"
                    android:textColor="@color/white"
                    android:id="@+id/back"
                    android:textSize="@dimen/defaultBtn"
                    android:visibility="invisible"
                    android:layout_weight="1"
            />
            <Button android:layout_width="match_parent"
                    android:textSize="@dimen/defaultBtn"
                    android:layout_weight="1"
                    android:id="@+id/refresh"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/btn_default"
                    android:layout_height="45dp"
                    android:textColor="@color/white"
                    android:text="@string/refresh"
            />
            <Button android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default"
                    android:layout_height="45dp"
                    android:text="@string/add"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    android:id="@+id/addBtn"
                    android:textSize="@dimen/defaultBtn"
            />
            <Button android:layout_width="match_parent"
                    android:background="@drawable/btn_default"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:id="@+id/choose"
                    android:layout_marginLeft="5dp"
                    android:text="@string/choose"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/defaultBtn"
            />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>